tests/baselines/reference/useSharedArrayBuffer6(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
useSharedArrayBuffer6.ts(2,6): error TS2339: Property 'length' does not exist on type 'SharedArrayBuffer'.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== useSharedArrayBuffer6.ts (1 errors) ====
    var foge = new SharedArrayBuffer(1024);
    foge.length; // should error
         ~~~~~~
!!! error TS2339: Property 'length' does not exist on type 'SharedArrayBuffer'.
    
    var length = SharedArrayBuffer.length;
    